--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /tp modul 9/Main/target/
 /tp modul 10/Main/target/
 /tp modul 11/Tp11/target/
+/tp modul 12/TP12/nbproject/private/
+/tp modul 12/TP12/build/
