--- a/tp modul 12/TP12/nbproject/project.properties
+++ b/tp modul 12/TP12/nbproject/project.properties
@@ -28,7 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\pc\\Downloads\\mysql\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +37,7 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.1.0.jar}
+    ${libs.MySQL_JDBC_Driver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
