--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /tp modul 11/Tp11/target/
 /tp modul 12/TP12/nbproject/private/
 /tp modul 12/TP12/build/
+/tp modul 13/TP13/nbproject/private/
+/tp modul 13/TP13/build/
